# rp2040-project

./: CMakeLists.txt  diagram.json  main.c  wokwi.toml
cmakefile/: CMakeCache.txt  Makefile  cmake_install.cmake  main.dis  main.elf.map  main.hex  main.uf2
cmakefile/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
cmakefile/pico-sdk/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/docs/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
cmakefile/pico-sdk/tools/: Makefile  cmake_install.cmake
cmakefile/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
lib/include/: lcd.h  lcd_init.h  lcdfont.h  main.h
lib/src/: lcd.c  lcd_init.c
(+132 files in other folders)
